[package]
name = "rust-arb-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ethers = { version = "1.0", features = ["abigen", "rustls"] }
eyre = "0.6"
dotenv = "0.15"
lettre = { version = "0.11", features = ["builder", "smtp-transport"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
