[package]
name = "rust-arbitrage-searcher"
version = "0.1.0"
edition = "2021"
default-run = "rust-arbitrage-searcher"

[dependencies]
ethers = { version = "2.0", features = ["ipc", "ws", "abigen", "rustls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dotenv = "0.15"
tracing = "0.1"
futures = "0.3"
tracing-subscriber = "0.3"
dashmap = "5.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
# 禁用了默认功能，改用 rustls 以匹配 ethers，防止 conflicts， build失败
lettre = { version = "0.10", default-features = false, features = [
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }
cocoon = "0.4"
rpassword = "7.0"
